package Structural.decorator.ongk2;

public abstract class AVKC
{
    abstract float TinhTong();
    abstract void hienThi();
}
